FA-74 detail result user p2

--- a/src/components/Leaderboard/Leaderboard.module.css
+++ b/src/components/Leaderboard/Leaderboard.module.css
@@ -49,12 +49,16 @@
 
 .result__username {
     font-weight: 700;
+    height: 30px;
+    width: 150px;
+    word-wrap: break-word;
 }
 
 .result__stat {
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-content: center;
+    margin-top: 20px;
 }
 
 .result__rank {
